2007-12-14  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in:  Increase the chance that ./configure will correctly
	find all the pieces of gnu libreadline under OSX 1.4.

2007-12-09  Ethan A Merritt  <merritt@u.washington.edu>

	* term/x11.trm: New option 'set term x11 linewidth LW'

2007-12-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c: Command line options -bw and -borderwidth were 
	being mapped to X Resource "borderwidth".  It should be "borderWidth".
	Also remove limitation that maximum linewidth is 4 pixels.

	* share/Makefile.am: Rename Gnuplot.app-defaults to Gnuplot before
	installing it.  Bug #1784379

	* src/graphics.c (place_rectangles):  If the linestyle is LT_DEFAULT,
	nevertheless check for an explicit linewidth for this rectangle.
	Bug #1833429

2007-12-08  Petr Mikulik  <mikulik@physics.muni.cz>

	New options "front" and "back" to "set colorbox" to let the box be
	drawn either after or below the image or surface.

	* src/gadgets.h src/gadgets.c: New "layer" field in color_box_struct.

	* src/graphics.c src/graph3d.c: Draw the colorbox at expected layers.

	* src/save.c src/set.c src/show.c src/tables.h src/tables.c
	docs/gnuplot.doc: The other necessary changes.

2007-12-01  Thomas Orgis  <sobukus@users.sourceforge.net>

	* src/gplt_x11.c (process_configure_notify_event):  Test for failure of
	window resize, and do not loop indefinitely trying to resize. Fixes
	infinite loop problem on ion and fluxbox window managers.
	Bug #1836959 #1614928

2007-11-25  Johannes Zellner  <johannes@zellner.org>

	* term/emf.trm: implemented pm3d and point types according to the
	suggestion in term/README.  (2006-12-07 patch to CVS trunk)

2007-11-25  Ethan A Merritt  <merritt@u.washington.edu>

	* term/estimate.trm: Never return a zero size estimate for a
	non-empty string. Promote fraction characters to size 1.

2007-11-25  Vladimir  <qva@users.sourceforge.net>

	* term/svg.trm (SVG_init): Correct encoding names to koi8-r, koi8-u.